--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1402,8 +1402,284 @@ width: 50%;
 }
 .Accelerate-Your-Business-frame-middle.new .Accelerate-Your-Business-frame-left-cont .normal-color-buttom{
   margin-top: 30px;
+  
+}
+.mobile-menu-header{
+  display: none;
 }
 @media all and (min-width:120px) and (max-width:680px){
-
-  
+  .bm-burger-bars {
+    background-color: #fff !important;
+    border-radius: 1px;
+    display: block;
+    height: 3px !important;
+    margin-bottom: 5px;
+    opacity: 1 !important;
+    position: relative !important;
+    top: 0 !important;
+    width: 28px;
+}
+  .mobile-menu-header{
+    display: block;
+  }
+.header-top-frame_main-desktop{
+  display: none;
+}
+  .Empowering-Staffing-Companies-middle {
+    display: inline-block;
+    width: 100%;
+}
+.Empowering-Staffing-Companies-middle-left {
+  width: 100%;
+}
+.Empowering-Staffing-Companies-middle-left h4 br{
+display: none;
+}
+.Empowering-Staffing-Companies-middle-right {
+  width: 100%;
+}
+.Empowering-Staffing-Companies-middle-left h4 {
+  font-size: 26px;
+  line-height: 37px;
+}
+.marqu-main-frame-img-cont h4{
+  font-size: 26px;
+  line-height: 37px;
+}
+.marqu-main-frame-img {
+  width: 480px;
+}
+.marqu-main-frame-img-cont p {
+  color: #fff;
+  margin-top: 20px;
+}
+.marqu-main-frame-img-cont {
+  padding: 20px;
+}
+.Reliable-Funding-When-You-Need-middle {
+  display: inline-block;
+  width: 100%;
+}
+.Reliable-Funding-When-You-Need-middle-left {
+  width: 100%;
+}
+.Reliable-Funding-When-You-Need-middle-left-header-cont-bottom{
+  margin-top: 50px;
+  margin-bottom: 50px; 
+}
+.Reliable-Funding-When-You-Need-middle-right {
+  width: 100%;
+  padding-left: 0px;
+}
+.Reliable-Funding-When-You-Need-middle-left-header-cont-bottom.two {
+  transform: translate(0px, 0px);
+  margin-top: 0px;
+}
+.Rapid-Fund-Processing-main {
+  display: inline-block;
+  width: 100%;
+}
+.Rapid-Fund-Processing-main-left-middl {
+  margin-top: 0px;
+  margin-bottom: 30px;
+}
+.Rapid-Fund-Processing-main-left {
+  width: 100%;
+}
+.Rapid-Fund-Processing-main-right {
+  width: 100%;
+  margin-left: 0px;
+  margin-top: 30px;
+}
+.Your-Trusted-Partner-for-Payroll-Funding-middle {
+  display: inline-block;
+  display: inline-block;
+  position: relative;
+}
+.Your-Trusted-Partner-for-Payroll-Funding-left {
+  width: 100%;
+  margin-bottom: 30px;
+}
+.Your-Trusted-Partner-for-Payroll-Funding-left-left h4 {
+  color: #fff;
+  font-size: 22px;
+}
+.Your-Trusted-Partner-for-Payroll-Funding-left.nn:hover {
+  width: 100%;
+}
+.Your-Trusted-Partner-for-Payroll-Funding-left-none-middle-left {
+  width: 100%;
+  padding: 20px;
+}
+.Your-Trusted-Partner-for-Payroll-Funding-left-none-middle-right {
+  width: 100%;
+}
+.Your-Trusted-Partner-for-Payroll-Funding-left-none-middle-left {
+  width: 100%;
+  padding: 20px;
+}
+.Your-Trusted-Partner-for-Payroll-Funding-left-none-middle{
+  display: inline-block;
+  width: 100%;
+}
+.How-Fundedd-Stands-Out h4 {
+  text-align: center;
+  color: #fff;
+  font-size: 22px;
+}
+.tab-view .react-tabs__tab{
+      width: 100%;
+    border-radius: 10px;
+    text-align: center;
+}
+.Expert-Advisory-for-middle {
+  display: inline-block;
+  width: 100%;
+}
+.Expert-Advisory-for-middle-left {
+  width: 100%;
+}
+.Expert-Advisory-for-middle-right {
+  width: 100%;
+}
+.Expert-Advisory-for-middle-right img {
+  width: 90%;
+  display: table;
+  transition: transform .2s;
+  margin: 0 auto;
+  margin-top: 31px;
+}
+.Our-Clients-middle {
+  display: inline-block;
+  width: 100%;
+}
+.Our-Clients-middle-left {
+  width: 100%;
+}
+.Our-Clients-middle-right {
+  width: 100%;
+  margin-left: 0px;
+  position: relative;
+  z-index: 99999;
+}
+.test-midl-f{
+  width: 100%;
+  display: inline-block;
+}
+.test-midl-f-left {
+  width: 100%;
+  position: relative;
+  left: 0px;
+}
+.test-midl-f-left img {
+  width: 90px !important;
+  margin-bottom: 20px;
+}
+.test-midl-f-right {
+  width: 100%;
+}
+.Insights-Industry-Trends h4 {
+  text-align: center;
+  color: #fff;
+  font-size: 22px;
+}
+.Begin-Your-Funding-Journey-middle-left {
+  border: 0px solid #FF7518;
+  border-bottom: 0px;
+  border-radius: 100px 200px 0px 0px;
+  width: 100%;
+  display: flex;
+  position: relative;
+}
+.Begin-Your-Funding-Journey-middle-left-left {
+  padding: 0px;
+  width: 100%;
+}
+.Begin-Your-Funding-Journey-right-icon2 {
+  position: absolute;
+  top: -35px;
+  right: 0px;
+}
+.Begin-Your-Funding-Journey-right-icon2 img{
+  width: 30px;
+}
+.Begin-Your-Funding-Journey-middle-left-left h4 {
+  color: #fff;
+  font-size: 22px;
+}
+.Begin-Your-Funding-Journey-right-icon {
+  text-align: center;
+  border-radius: 200px 0px 0px 0px;
+  position: relative;
+  width: 100%;
+  bottom: 0px;
+  right: 0px;
+  z-index: 1;
+  height: auto;
+}
+.Begin-Your-Funding-Journey-middle-left-left p {
+  color: #fff;
+  padding-left: 50px;
+  margin-top: 20px;
+  padding-right: 50px;
+}
+.tab-view .react-tabs__tab-list{
+  width: auto;
+  border-radius: 9px;
+}
+.Expert-Advisory-for-middle-left-cont h3 {
+  color: #fff;
+  font-size: 22px;
+}
+.footer-middle {
+  display: inline-block;
+  margin: 30px 0px;
+}
+.footer-middle-left {
+  width: 100%;
+}
+.footer-middle-left h4 {
+  color: #fff;
+  font-size: 22px;
+}
+.footer-middle-left .footer-middle-left-search input {
+  background: #F2F2F2 0% 0% no-repeat padding-box;
+  border-radius: 5px;
+  width: 100%;
+}
+.footer-middle-right {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-top: 30px;
+}
+.Our-Clients-middle-left h4{
+  font-size: 22px;
+}
+.Our-Clients-middle-left h4 br{
+  display: none;
+}
+.client-name-right-mig{
+  display: none ;
+}
+.Insights-Industry-Trends p{
+  padding: 0px 20px;  
+}
+.Insights-Industry-Trends p span {
+  display: inline;
+}
+.Your-Trusted-Partner-for-Payroll-Funding-right.two .Your-Trusted-Partner-for-Payroll-Funding-right-left {
+  width: 100%;
+}
+.Your-Trusted-Partner-for-Payroll-Funding-left.twoo:hover .Your-Trusted-Partner-for-Payroll-Funding-right.two {
+  display: inline-block;
+  justify-content: space-between;
+  width: 100%;
+}
+.Your-Trusted-Partner-for-Payroll-Funding-left.twoo:hover {
+  width: 100%;
+}
+.Your-Trusted-Partner-for-Payroll-Funding-right.two .Your-Trusted-Partner-for-Payroll-Funding-right-right {
+  width: 100%;
+}
 }
