--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1408,6 +1408,161 @@ width: 50%;
   display: none;
 }
 @media all and (min-width:120px) and (max-width:680px){
+  .logo-mobilr{
+    width: 50%;
+    margin-top: 9px;
+  }
+  .logo-mobilr img{
+    width: 100%;
+  }
+  .bm-burger-button {
+    height: 30px;
+    position: absolute;
+    right: 0;
+    top: 10px;
+    width: 36px;
+}
+.bm-menu-wrap {
+  background: #000000b5;
+  left: 0;
+  top: 0;
+  width: 100% !important;
+  z-index: 99999999 !important;
+}
+/*menu */
+.bm-menu-wrap {
+  background: #000000b5;
+  left: 0;
+  top: 0;
+  width: 100%!important;
+  z-index: 99999999 !important;
+}
+.bm-menu-wrap .bm-menu {
+  background: #fff;
+  width: 70%!important;
+  position: relative;
+}
+.mobilemenu-new .accordion__button{
+  background-color: #fff;
+  position: relative;
+}
+.bm-menu-wrap .bm-cross-button {
+  height: 100%!important;
+  width: 15%!important;
+}
+.bm-cross {
+  background: #fff;
+}
+
+.dropdown.mobilemenu-new .accordion__button:before {
+  content: inherit;
+}
+.bm-overlay {
+  background: transparent!important;
+  right: 0;
+  width: 0!important;
+}
+.bm-burger-button {
+  height: 30px;
+  position: absolute;
+  right: 0;
+  top: 10px;
+  width: 36px;
+}
+.bm-burger-bars {
+  background-color: #fff!important;
+  border-radius: 1px;
+  display: block;
+  height: 3px!important;
+  margin-bottom: 5px;
+  opacity: 1!important;
+  position: relative!important;
+  top: 0!important;
+  width: 28px;
+}
+.dropdown.mobilemenu-new .accordion__item:nth-child(1) .accordion__button::after {
+  content: inherit;
+}
+.dropdown.mobilemenu-new .accordion__item:nth-child(4) .accordion__button::after {
+content: inherit;
+}
+.dropdown.mobilemenu-new .accordion__item:nth-child(7) .accordion__button::after {
+  content: inherit;
+}   
+.dropdown.mobilemenu-new .accordion__item:nth-child(8) .accordion__button::after {
+  content: inherit;
+}
+.dropdown.mobilemenu-new .Menu-underLink li a {
+  color: #eb5e26!important;
+  display: inline-block;
+  padding: 8px 0;
+}
+.dropdown.mobilemenu-new .Menu-underLink li{
+  list-style-type: none;
+}
+.img-responsive_all{width: 100%;}
+.col-md-12.mobile {
+display: inherit;
+}
+.logo img {
+width: 120px;
+}
+.Mobile_menu{display: initial;float: right;
+}
+.row.desktop{display: none;}
+.Mobile_menu .icon-bar {
+background-color: #888;
+display: block;
+width: 22px;
+height: 2px;
+border-radius: 1px;
+
+}
+.Mobile_menu .icon-bar+.icon-bar {
+margin-top: 4px;
+}
+.Mobile_menu .button{
+background-color: #ddd;
+padding: 9px 10px;
+width: 42px;
+float: right;
+}
+
+.Mobile_menu .dropdown{    position: relative;}
+.Mobile_menu .button ~ ul{    position: absolute;
+left: 0px;
+top: 0px;
+z-index: 99999;
+background: #fff;
+width: 100%;
+padding: 5px 20px;
+border-top: 1px solid #ccc;
+margin-top:0px;}
+
+.Mobile_menu .button ~ ul li{    list-style-type: none;}
+.Mobile_menu .button ~ ul li a{  
+text-decoration: none !important;
+font-size: 17px; 
+line-height: 28px;
+font-family: 'Raleway', sans-serif;
+border-bottom: 1px solid #ccccccb8;
+color: #000;
+padding-top: 5px;
+padding-bottom: 5px;
+position: relative;
+display: block;
+}
+
+.react-tabs__tab{
+font-size: 15px;
+padding: 10px 4px;
+width: 50%;
+text-align: center;
+}
+/*menu end */
+  .header-logo-right{
+    width: 70%;
+  }
   .bm-burger-bars {
     background-color: #fff !important;
     border-radius: 1px;
@@ -1420,7 +1575,10 @@ width: 50%;
     width: 28px;
 }
   .mobile-menu-header{
-    display: block;
+    margin: 0px;
+    display: flex;
+    background: #000;
+    padding: 20px 18px;
   }
 .header-top-frame_main-desktop{
   display: none;
