--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1146,6 +1146,20 @@ padding-top: 0px;
   padding-left: 0px;
   width: 100%;
 }
+.Reliable-Funding-When-You-Need.What-is-AR-Factoring .Expert-Advisory-for-middle-left-cont h5{
+  color: #FF7518;
+  font-size: bold;
+  font-size: 18px;
+}
+.Reliable-Funding-When-You-Need.What-is-AR-Factoring .Expert-Advisory-for-middle-left-cont ul{
+  padding-left: 20px !important;
+  margin-top: 20px !important;
+}
+.Reliable-Funding-When-You-Need.What-is-AR-Factoring .Expert-Advisory-for-middle-left-cont ul li{
+  color: #fff;
+  margin-bottom: 5px;
+  list-style-type: disc;
+}
 .Reliable-Funding-When-You-Need.What-is-AR-Factoring .Expert-Advisory-img-resp-main img.left-Advisory{
   bottom: 50px;
 }
@@ -1838,6 +1852,13 @@ display: none;
   width: 100%;
 }
 .Your-Trusted-Partner-for-Payroll-Funding-right.two .Your-Trusted-Partner-for-Payroll-Funding-right-right {
+  width: 100%;
+}
+.Accelerate-Your-Business-frame-middle {
+  display: inline-block;
+  width: 100%;
+}
+.Accelerate-Your-Business-frame-left {
   width: 100%;
 }
 }
