--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1524,9 +1524,26 @@ margin-top: 30px !important;
   display: inline-block;
 }
 .our-misson-middlem-main{
-  background: #000;
-  padding: 80px 0px;
+  padding: 90px 0px;
   text-align: center;
+  background: url(/_next/static/media/shutterstock_1363289006@2x.be63624e.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  position: relative;
+  
+}
+.our-misson-middlem-main::before{
+  background: #0000007a;
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  content: "";
+  top: 0px;
+}
+.our-misson-middlem-main-middle{
+  position: relative;
+    z-index: 999;
 }
 .about-us-main-page .Reliable-Funding-When-You-Need.What-is-AR-Factoring{
   overflow: hidden;
