--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1526,7 +1526,7 @@ margin-top: 30px !important;
 .our-misson-middlem-main{
   padding: 90px 0px;
   text-align: center;
-  background: url(/_next/static/media/shutterstock_1363289006@2x.be63624e.png);
+  background: url(../app/img/shutterstock_1363289006@2x.be63624e.png);
   background-repeat: no-repeat;
   background-size: 100%;
   position: relative;
