--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,7 +64,7 @@ a{
 .header-top-right ul li{
   display: flex;
   justify-content: space-between;
-  width: 26%;
+  width: 45%;
   justify-content: space-between;
   padding: 0px 20px;
 }
@@ -1809,6 +1809,53 @@ background: #000;
 .partner-list-main-frame-middle img{
   width: 70px;
   margin-right: 25px;
+}
+.hubspot-form-pop-main-all-page{
+  background: #494949d1;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+  z-index: 9999999;
+}
+.hubspot-form-pop-main-all-page-middle{
+  width: 45%;
+  margin: 0 auto;
+  margin-top: 5%;
+  background: #222222 0% 0% no-repeat padding-box;
+  box-shadow: 0px 0px 50px #FF751859;
+  border-radius: 20px;
+  padding: 50px 40px;
+}
+.hubspot-form-pop-main-all-page-middle h4{
+  color: #fff;
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.hubspot-form-pop-main-all-page-middle h4 span{
+color: #FF7518;
+}
+.hubspot-form-pop-main-all-page-middle{
+  position: relative;
+}
+.close-ion-main-page{
+  position: absolute;
+  right: 30px;
+  top: 20px;
+  z-index: 9999;
+}
+.close-ion-main-page img{
+  width: 25px !important;
+}
+.close-ion-main-page a{
+  padding: 0px !important;
+  border: 0px solid #FF7518 !important;
+  background: transparent !important;
+}
+.nonenone{
+  display: none;
 }
 @media all and (min-width:120px) and (max-width:680px){
   .How-Banks-Benefit-parter-page{
