--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,21 @@
   font-family:Poppins-Regular;
   src:url('../app/fonts/Poppins-Regular.ttf');
 }
+.Insights-Industry-Trends.blogmi{
+  position: relative;
+  background: #000;
+  padding-bottom: 70px;
+}
+.Insights-Industry-Trends.blogmi::before { 
+  content: "";
+  background: linear-gradient(90deg, #ff75184a 0%, #00000030 35%, #ff75184a 100%);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
 body{
   padding: 0px;
   margin: 0px;
@@ -377,6 +392,162 @@ position: relative;
   padding: 10px 10px;
   width: 90%;
   margin: 0 auto;
+}
+.Insights-Industry-Trends.blogmi .testimonial-frame-right{
+  background: #E4E4E4 0% 0% no-repeat padding-box;
+  border-radius: 25px;
+  padding: 0px;
+  width: 90%;
+  margin: 0 auto;          
+}
+.Insights-Industry-Trends.blogmi .testimonial-frame-right p:nth-child(2){
+ color: #000;
+ padding: 10px 10px;
+ height: 140px;
+}
+.blog-main-pagge-middle{
+      display: flex;
+      justify-content: space-between;
+      z-index: 99999;
+      position: relative;
+}
+.blog-main-pagge-middle .blog-main-pagge-middle-left{
+  width: 36%;
+}
+.blog-detail-page img{
+  width: 100%;
+}
+.blog-detail-page {
+  position: relative;
+}
+.blog-detail-page-middle{
+  position: absolute;
+  left: 10%;
+  top: 30%;
+  z-index: 9999999;
+  width: 590px;
+  background: #FF7518 0% 0% no-repeat padding-box;
+  border-radius: 20px;
+  padding: 80px 45px;
+}
+.blog-detail-page-middle h4{
+  color: #fff;
+  font-size: 32px;
+  margin-top: 25px;
+}
+.blog-detail-page-middle h5{
+  color: #000000;
+    font-weight: 600;
+    font-size: 17px;
+}
+.blog-detail-page .container{
+ 
+}
+.blog-page-inner-section-content{
+  background: #000;
+  position: relative;
+  background: #000;
+  position: relative;
+  padding: 60px 0px;
+}
+.blog-page-inner-section-content .container{
+  position: relative;
+  z-index: 999;
+  
+}
+.blog-page-inner-section-content::after {
+  content: "";
+  background: linear-gradient(90deg, #ff75184a 0%, #00000030 35%, #ff75184a 100%);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+.blog-page-inner-section-content h4{
+color: #FF7518;
+font-size: 16px;
+margin: 25px 0px;
+}
+.blog-page-inner-section-content p{
+color: #fff;
+margin: 25px 0px;
+}
+.blog-page-inner-section-content p span{
+  font-weight: 600;
+}
+.blog-page-inner-section-content ul{
+  padding-left: 20px !important;
+}
+.Suggested-Blogs-main-section h4{
+  color: #fff;
+  font-size: 32px;
+  margin-top: 80px;
+  text-align: left;
+}
+.Suggested-Blogs-main-section.Insights-Industry-Trends.blogmi{
+  background: transparent;
+  padding-bottom: 0px;
+  padding: 0px;
+}
+.Suggested-Blogs-main-section.Insights-Industry-Trends.blogmi::before{
+  content:inherit;
+}
+.Suggested-Blogs-main-section.Insights-Industry-Trends.blogmi li{
+  list-style-type: none;
+}
+.blog-page-inner-section-content ul li{
+  color: #fff;
+  margin-bottom: 15px;
+  list-style-type: disc;
+}
+.blog-page-inner-section-content ul li::marker { 
+  color: #FF7518;
+}
+.blog-main-pagge-middle .blog-main-pagge-middle-right{
+  width: 63%;
+}
+.blog-main-pagge-middle-left h4{
+  text-align: left;
+}
+.blog-main-pagge-middle-right .font-blog-main-middle{
+  display: flex;
+}
+.font-blog-main-middle-left{
+  width: 50%;
+  background: #FFFFFF;
+  position: relative;
+  border-radius: 20px;
+}
+.font-blog-main-middle-left h4{
+  color: #000;
+  font-size: 24px;
+  text-align: left;
+  padding: 40px 30px; 
+}
+.blog-arrow{
+  position: absolute;
+    right: 25px;
+    bottom: 20px;
+}
+.blog-main-pagge-middle-left h4{
+  font-size: 40px;
+}
+.blog-main-pagge-middle-left h4 span{
+  font-size: 50px;
+}
+.Accelerate-Your-Business-frame-middle.new{
+  align-items: center;
+}
+.blog-arrow img{
+  width:25px;
+}
+.font-blog-main-middle-right{
+  width: 50%;
+}
+.font-blog-main-middle-right img{
+  width: 100%;   
 }
 .testimonial-frame-right p:nth-child(3){
   display: inline-block;
